// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tree /> snapshot should match snapshot 1`] = `
<Tree
  treeStructure={
    {
      "children": [
        {
          "children": [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        {
          "children": [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  />
</Tree>
`;

exports[`<Tree /> snapshot should match snapshot with className 1`] = `
<Tree
  className="example-class"
  treeStructure={
    {
      "children": [
        {
          "children": [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        {
          "children": [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="example-class md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  />
</Tree>
`;

exports[`<Tree /> snapshot should match snapshot with id 1`] = `
<Tree
  id="example-id"
  treeStructure={
    {
      "children": [
        {
          "children": [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        {
          "children": [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    id="example-id"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
  />
</Tree>
`;

exports[`<Tree /> snapshot should match snapshot with style 1`] = `
<Tree
  style={
    {
      "color": "pink",
    }
  }
  treeStructure={
    {
      "children": [
        {
          "children": [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        {
          "children": [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
    style={
      {
        "color": "pink",
      }
    }
  />
</Tree>
`;

exports[`<Tree /> snapshot should match snapshot with style 2`] = `
<Tree
  style={
    {
      "color": "pink",
    }
  }
  treeStructure={
    {
      "children": [
        {
          "children": [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        {
          "children": [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
    style={
      {
        "color": "pink",
      }
    }
  />
</Tree>
`;

exports[`<Tree /> snapshot should match snapshot with style 3`] = `
<Tree
  style={
    {
      "color": "pink",
    }
  }
  treeStructure={
    {
      "children": [
        {
          "children": [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        {
          "children": [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tree"
    style={
      {
        "color": "pink",
      }
    }
  />
</Tree>
`;
